--- a/wiki/C_stdlib.wiki
+++ b/wiki/C_stdlib.wiki
@@ -1,4 +1,4 @@
-#summary stdlib for AS3.
+#summary stdlib.h for AS3.
 
 <wiki:comment>
 Because we are defining libraries for Tamarin we can not really use asdoc to document the source code.
