--- a/wiki/C_unistd.wiki
+++ b/wiki/C_unistd.wiki
@@ -1,4 +1,4 @@
-#summary unistd for AS3.
+#summary unistd.h for AS3.
 
 <wiki:comment>
 Because we are defining libraries for Tamarin we can not really use asdoc to document the source code.
