Edited wiki page C_string through web user interface.

--- a/wiki/C_string.wiki
+++ b/wiki/C_string.wiki
@@ -1,4 +1,4 @@
-#summary string for AS3.
+#summary string.h for AS3.
 
 <wiki:comment>
 Because we are defining libraries for Tamarin we can not really use asdoc to document the source code.
