--- a/wiki/C_stdio.wiki
+++ b/wiki/C_stdio.wiki
@@ -1,4 +1,4 @@
-#summary stdio for AS3.
+#summary stdio.h for AS3.
 
 <wiki:comment>
 Because we are defining libraries for Tamarin we can not really use asdoc to document the source code.
