--- a/wiki/C_socket.wiki
+++ b/wiki/C_socket.wiki
@@ -1,4 +1,4 @@
-#summary socket for AS3.
+#summary socket.h for AS3.
 
 <wiki:comment>
 Because we are defining libraries for Tamarin we can not really use asdoc to document the source code.
