--- a/wiki/C_socket.wiki
+++ b/wiki/C_socket.wiki
@@ -104,7 +104,12 @@ by providing an IP address.
 {{{
 import C.socket.*;
 
-//TODO
+//first we want the origin IP
+trace( "origin: " + gethostbyname( "youtube.com", true ) ); //origin: 74.125.95.93,74.125.127.93
+
+//and now we can we can request with the IP address
+trace( "names: " + gethostbyaddr( "74.125.95.93") ); //names: iw-in-f93.1e100.net,93.95.125.74.in-addr.arpa
+trace( "ips: " + gethostbyaddr( "74.125.95.93", true) ); //ips: 74.125.95.93
 }}}
 
 *since:* 0.3.0
@@ -122,7 +127,8 @@ by providing a hostname.
 {{{
 import C.socket.*;
 
-//TODO
+trace( "names: " + gethostbyname( "www.youtube.com") ); //names: youtube-ui.l.google.com,www.youtube.com
+trace( "ips: " + gethostbyname( "www.youtube.com", true) ); //ips: 209.85.143.93,209.85.143.190,209.85.143.136,209.85.143.91
 }}}
 
 *since:* 0.3.0
