--- a/wiki/C_unistd.wiki
+++ b/wiki/C_unistd.wiki
@@ -78,6 +78,30 @@ Determine accessibility of a file.
 *since:* 0.3.0
 
 
+== chdir ==
+<font color="red">not implemented for UNIX/WIN32</font><br>
+{{{
+public function chdir( path:String ):int
+}}}
+Change working directory.
+
+*since:* 0.3.0
+
+== chmod ==
+{{{
+public function chmod( path:String, mode:int ):int
+}}}
+Change mode of a file.
+
+*note:*<br>
+under WIN32 chmod is limited, you will only be able to set read or write at the user level<br>
+`chmod( "myfile.txt", S_WRITE );`<br>
+will be the same as<br>
+`chmod( "myfile.txt", (S_IWUSR | S_IWGRP | S_IWOTH ) );`
+
+*since:* 0.3.0
+
+
 == getcwd ==
 {{{
 public function getcwd():String
@@ -123,21 +147,6 @@ Remove directory.
 *since:* 0.3.0
 
 
-== chmod ==
-{{{
-public function chmod( path:String, mode:int ):int
-}}}
-Change mode of a file.
-
-*note:*<br>
-under WIN32 chmod is limited, you will only be able to set read or write at the user level<br>
-`chmod( "myfile.txt", S_WRITE );`<br>
-will be the same as<br>
-`chmod( "myfile.txt", (S_IWUSR | S_IWGRP | S_IWOTH ) );`
-
-*since:* 0.3.0
-
-
 == sleep ==
 {{{
 public function sleep( milliseconds:uint ):void
@@ -148,11 +157,6 @@ Suspend execution for an interval of time.
 `sleep()` in C usually use seconds, here we are using milliseconds.
 
 *since:* 0.3.0
-
-
-== chdir ==
-<font color="red">not implemented</font><br>
-Change working directory.
 
 
 == unlink ==
