Edited wiki page TOC through web user interface.

--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -31,7 +31,7 @@
     * [Tamarin Tamarin]
     * [ASC ActionScript Compiler]
     * [ABC ActionScript Byte Code]
-    * [Porjector Projector]
+    * [Projector Projector]
     * [Security Security]
     * [Examples Examples]
     * [Tutorials Tutorials]
