--- a/configs/redtamarin/changelog.txt
+++ b/configs/redtamarin/changelog.txt
@@ -22,6 +22,9 @@
    etc.
 - added chdir() and unlink()
 - re-integrated all of clib, tested only on OSX
+- changed some logic in ShellCore and avmshell
+  now when you embed your abc in a projector
+  you don't need to use -- before passing your arguments
 
 * 0.2.9
 - added VMPI_chmod
