--- a/wiki/Projector.wiki
+++ b/wiki/Projector.wiki
@@ -251,6 +251,18 @@ and that means we can reuse `*.abc` files as libraries (kind of like a `*.swc`).
 
 TODO (talk about tools here)
 
+createprojector<br>
+see [http://code.google.com/p/redtamarin/source/browse/samples/createprojector.as /samples/createprojector.as]
+{{{
+Usage:
+ createprojector [-exe avmshell] [-o filename] file
+ file           a *.swf or *.abc file
+ -exe avmshell  the avmshell executable to use
+ -o filename    defines the name of the output file
+}}}
+
+
+
 
 === Misc. ===
 
