--- a/wiki/AVMPlus.wiki
+++ b/wiki/AVMPlus.wiki
@@ -1,8 +1,8 @@
-#summary AVMPlus APIs.
+#summary AVMPlus API.
 
 == Introduction ==
 
-Those API are specific to *redshell* (avmshell) running on the command-line.
+This API is specific to *redshell* (avmshell) running on the command-line.
 
 In short, anything that is considered native goes into the *avmplus* AS3 package.
 
