Edited wiki page TOC through web user interface.

--- a/wiki/TOC.wiki
+++ b/wiki/TOC.wiki
@@ -23,10 +23,10 @@
        * [C_socket socket]
     * [FlashPlatform Flash Platform]
     * [AVMPlus AVMPlus]
-       * [System System API]
-       * [FileSystem File System API]
-       * [OperatingSystem Operating System API]
-       * [Socket Sockets API]
+       * [System System]
+       * [OperatingSystem Operating System]
+       * [FileSystem File System]
+       * [Socket Sockets]
   * Documentation
     * [Tamarin Tamarin]
     * [ASC ActionScript Compiler]
