--- a/wiki/System.wiki
+++ b/wiki/System.wiki
@@ -1,4 +1,4 @@
-#summary The System API.
+#summary AVMPlus System class.
 
 <wiki:comment>
 Because we are defining libraries for Tamarin we can not really use asdoc to document the source code.
