--- a/wiki/FileSystem.wiki
+++ b/wiki/FileSystem.wiki
@@ -1,4 +1,4 @@
-#summary The File System API.
+#summary AVMPlus File System class.
 
 <wiki:comment>
 Because we are defining libraries for Tamarin we can not really use asdoc to document the source code.
