--- a/wiki/System.wiki
+++ b/wiki/System.wiki
@@ -27,7 +27,24 @@ public static const argv:Array
 Contains the arguments passed to the program.
 
 *note:*<br>
-initialised by the private function `getArgv()`
+initialised by the private native function `getArgv()`.<br>
+Compared to C++ argv, argv[0] is not included<br>
+but saved in `programFilename`.
+
+*usage:*<br>
+{{{
+redshell.exe myprogram.abc -- -arg1 -arg2 arg3
+}}}
+when you are running an `*.abc` file with the avmshell<br>
+you need to use `--` followed by the command line arguments.
+
+{{{
+myprogram.exe -arg1 -arg2 arg3
+}}}
+when you are running an independent executable<br>
+(avmshell embedding an `*.abc` file)<br>
+you pass directly the command line arguments (like any other exe).
+
 
 *since:* 0.3.0
 
@@ -39,7 +56,7 @@ public static const startupDirectory:String
 The original directory when the application started.
 
 *note:*<br>
-initialised by the private function `getStartupDirectory()`
+initialised by the private native function `getStartupDirectory()`
 
 *since:* 0.3.0
 
